# edupals-base-toolkit

./: CMakeLists.txt  Doxyfile  EdupalsBaseConfig.cmake  README.md  meson.build
cmake/: EdupalsBaseConfig.cmake  EdupalsBaseConfigVersion.cmake
debian/: changelog  control  copyright  libedupals-base-dev.dirs  libedupals-base-dev.install
include/: base64.hpp  bson.hpp  cmd.hpp  configfile.hpp  console.hpp  dfa.hpp  dmi.hpp  filesystem.hpp  grammar.hpp  group.hpp  json.hpp  lexer.hpp  log.hpp  network.hpp  process.hpp  system.hpp  token.hpp  uri.hpp  user.hpp  variant.hpp  workqueue.hpp
src/: CMakeLists.txt  base64.cpp  bson.cpp  cmd.cpp  configfile.cpp  dfa.cpp  dmi.cpp  filesystem.cpp  grammar.cpp  group.cpp  json.cpp  lexer.cpp  log.cpp  meson.build  network.cpp  process.cpp  system.cpp  testing.cpp  token.cpp  uri.cpp  user.cpp  variant.cpp
